word count & page rank algorithm with spark context

--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -95,7 +95,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -118,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,42 +136,42 @@
     "        \n",
     "        theta = theta - (alpha/m)*delta\n",
     "        cost1 = cost(X,y,theta)\n",
-    "        costs.append(cost1)\n",
     "        thetas.append(theta)\n",
+    "        costs.append(cost)\n",
     "    return costs, thetas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 101\n"
+      "[]\n"
      ]
     }
    ],
    "source": [
     "firstTheta = [[-5],[5]]\n",
     "costs, thetas = linear_regresstion(X1, firstTheta, y, 0.5)\n",
-    "print(len(costs), len(thetas))"
+    "print(costs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x11a4ecfa0>]"
+       "[<matplotlib.lines.Line2D at 0x11a70ad00>]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -192,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
