--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -33,49 +33,21 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>one</th>\n",
-       "      <td>2014</td>\n",
-       "      <td>bob</td>\n",
-       "      <td>1.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>two</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>tom</td>\n",
-       "      <td>1.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>three</th>\n",
        "      <td>2015</td>\n",
        "      <td>kim</td>\n",
        "      <td>3.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>four</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>lee</td>\n",
-       "      <td>1.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>five</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>park</td>\n",
-       "      <td>2.4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       year  name  point\n",
-       "one    2014   bob    1.5\n",
-       "two    2015   tom    1.7\n",
-       "three  2015   kim    3.6\n",
-       "four   2018   lee    1.5\n",
-       "five   2020  park    2.4"
+       "       year name  point\n",
+       "three  2015  kim    3.6"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +62,7 @@
     "five = pd.Series({'year':'2020', 'name':'park', 'point': 2.4})\n",
     "\n",
     "group = pd.DataFrame([one, two, three, four, five], index = ['one', 'two', 'three', 'four', 'five'])\n",
-    "group"
+    "group.loc[['three']]"
    ]
   },
   {
@@ -173,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -199,6 +171,7 @@
        "      <th></th>\n",
        "      <th>year</th>\n",
        "      <th>name</th>\n",
+       "      <th>point</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -206,47 +179,24 @@
        "      <th>one</th>\n",
        "      <td>2014</td>\n",
        "      <td>bob</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>two</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>tom</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>three</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>kim</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>four</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>lee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>five</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>park</td>\n",
+       "      <td>1.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       year  name\n",
-       "one    2014   bob\n",
-       "two    2015   tom\n",
-       "three  2015   kim\n",
-       "four   2018   lee\n",
-       "five   2020  park"
+       "     year name  point\n",
+       "one  2014  bob    1.5"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "group.loc[:, ['year', 'name']]"
+    "group.loc[['one'], :]"
    ]
   },
   {
@@ -423,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -448,41 +398,33 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>name</th>\n",
-       "      <th>age</th>\n",
-       "      <th>score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>one</th>\n",
        "      <td>bob</td>\n",
-       "      <td>20</td>\n",
-       "      <td>90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>three</th>\n",
        "      <td>kim</td>\n",
-       "      <td>27</td>\n",
-       "      <td>70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>five</th>\n",
        "      <td>park</td>\n",
-       "      <td>30</td>\n",
-       "      <td>30</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       name  age  score\n",
-       "one     bob   20     90\n",
-       "three   kim   27     70\n",
-       "five   park   30     30"
+       "       name\n",
+       "one     bob\n",
+       "three   kim\n",
+       "five   park"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,12 +439,12 @@
     "five = pd.Series({'name':'park', 'age':30, 'score': 30})\n",
     "\n",
     "df1 = pd.DataFrame([one, two, three, four, five], index = ['one', 'two', 'three', 'four', 'five'])\n",
-    "df1.iloc[::2]"
+    "df1.iloc[::2, :1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +496,7 @@
        "four  lee   11     95"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,6 +504,78 @@
    "source": [
     "df1.loc[['two', 'four']]\n",
     "#loc는 string index로 명시"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>one</th>\n",
+       "      <td>bob</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>two</th>\n",
+       "      <td>tom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>three</th>\n",
+       "      <td>kim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>four</th>\n",
+       "      <td>lee</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>five</th>\n",
+       "      <td>park</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       name\n",
+       "one     bob\n",
+       "two     tom\n",
+       "three   kim\n",
+       "four    lee\n",
+       "five   park"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1[['name']]"
    ]
   },
   {
