--- a/Python(lambda, map,filter,reduce).ipynb
+++ b/Python(lambda, map,filter,reduce).ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -77,10 +77,10 @@
    ],
    "source": [
     "names = ['jihoon', 'kang', 'Jihoon', 'Kang']\n",
-    "conterted_tuple = tuple(map(lambda s: str(s).upper(), names))\n",
+    "conterted_tuple = tuple(map(lambda s: s.upper(), names))\n",
     "print(conterted_tuple)\n",
     "\n",
-    "conterted_set = set(map(lambda s: str(s).upper(), names))\n",
+    "conterted_set = set(map(lambda s: s.upper(), names))\n",
     "print(conterted_set)"
    ]
   },
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "[2, 3, 5, 7, 9]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
    "source": [
     "a = [1,2,3,5,7,9]\n",
     "b = [2,3,4,5,7,9]\n",
-    "list(filter(lambda x: x in a,b))"
+    "list(filter(lambda x: x in a, b))"
    ]
   },
   {
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "6"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
    "source": [
     "from functools import reduce\n",
     "#reduce(function, iterable, initializer=None)\n",
-    "reduce((lambda x, y: x*y), [1,2,3])"
+    "reduce(lambda x, y: x*y, [1,2,3])"
    ]
   },
   {
